# Tetris

./: .gitignore  CMakeLists.txt  README.md  Tetris.sln
Tetris/: Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  Button.h  Combination.cpp  Combination.h  CombinationFactory.cpp  CombinationFactory.h  Game.cpp  Game.h  Menu.cpp  Menu.h  MySDL.cpp  MySDL.h  Tetris.vcxproj  Tetris.vcxproj.filters  Texture.cpp  Texture.h  main.cpp  res.h
Tetris/Debug/: vc142.idb
Tetris/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate
Tetris/res/: list_blocks
Tetris/x64/Debug/: Tetris.exe.recipe  vc142.idb
Tetris/x64/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/x64/Release/: Tetris.exe.recipe
Tetris/x64/Release/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  Tetris.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  Combination.cpp  Combination.h  CombinationFactory.cpp  CombinationFactory.h  Game.cpp  Game.h  MySDL.cpp  MySDL.h  Texture.cpp  Texture.h  main.cpp  res.h
x64/Debug/: Tetris.ilk
